# hand_controller_ros

./: README.md
allegro_hand_kdl/: CMakeLists.txt  package.xml
allegro_hand_kdl/config/: cartesian_poses.yaml  gains.yaml  joint_poses.yaml  params.yaml
allegro_hand_kdl/include/allegro_hand_kdl/: cartesian_force.h  cartesian_position_control.h  inverse_dynamics.h  kinematics.h  pose_control_client.h
allegro_hand_kdl/launch/: cartesian_pose_control.launch  gravity_compensate.launch  joint_pose_control.launch
allegro_hand_kdl/nodes/: pose_service.py
allegro_hand_kdl/src/: allegro_kdl_config.cpp  cartesian_force.cpp  cartesian_position_control.cpp
allegro_hand_kdl/src/nodes/: envelop_force.cpp  force_control.cpp  gravity_compensater.cpp
allegro_hand_kdl/src/servers/: cartesian_pose_server.cpp  joint_pose_server.cpp
allegro_hand_kdl/srv/: GainParam.srv  GainRequest.srv  PoseRequest.srv
allegro_hand_kdl/test/: kinematics_node.cpp
hand_driver/allegro_hand_controllers/src/: allegro_node.cpp
hand_driver/allegro_hand_description/: allegro_hand_config.rviz  allegro_hand_description_left.urdf  allegro_hand_description_right.urdf  allegro_hand_description_right.xacro
hand_driver/allegro_hand_description/worlds/: allegro.world
kdl_control_tools/: CMakeLists.txt  README.md  package.xml
kdl_control_tools/include/kdl_control_tools/: grasp_matrix.h  kdl_helper.h  multi_robot_trajectory.h  progress_logger.h  trajectory.h  trajectory_visualizer.h
kdl_control_tools/msg/: WrenchArray.msg
kdl_control_tools/src/: grasp_matrix.cpp  kdl_helper.cpp  progress_logger.cpp  trajectory_visualizer.cpp
kdl_control_tools/test/: progress_logger_test.cpp
kuka_driver/: PTP.py  Tutorial_directServoJoints.py  dummy_pub.py  kuka_control.py  traj.npy  traj2.npy
kuka_driver/assets/: iiwa14.urdf
ros_topic_connector/: CMakeLists.txt  README.md  package.xml
ros_topic_connector/include/topic_connector/: joint_state_adder.h  joint_state_connector.h  joint_state_limiter.h  joint_state_switch.h
ros_topic_connector/launch/: connector_example.launch
ros_topic_connector/src/: connector_node.cpp  joint_state_adder.cpp  joint_state_connector.cpp  joint_state_limiter.cpp  joint_state_switch.cpp
